--- a/src/sass/partials/_navs.sass
+++ b/src/sass/partials/_navs.sass
@@ -52,6 +52,11 @@
         font-family: $gotham
         line-height: $nav-height
 
+      &:not(.item-btn):hover
+        a
+          background-color: transparent
+          color: $gray-lighter
+
     .item-toggle
       a
         padding: 0 1rem
